correct flex align on chrome

--- a/css/stylesheet.sass
+++ b/css/stylesheet.sass
@@ -410,7 +410,7 @@ div.footnotes
 
     display: flex
     flex-direction: column
-    justify-content: end
+    justify-content: flex-end
 
     p
       font-size: $baseFontSize * 2
